# TrafficCopilot

./: .gitignore  README.md  build.gradle  pyproject.toml  settings.gradle
docs/: traffic-violation-ai-assistant-scope.md
src/main/java/com/trafficcopilot/core/: SubmissionCore.java
src/main/java/com/trafficcopilot/phase1/: Phase1Orchestrator.java
src/main/kotlin/com/trafficcopilot/phase1/: Phase1Orchestrator.kt
src/test/java/com/trafficcopilot/core/: SubmissionCoreTest.java
src/test/java/com/trafficcopilot/phase1/: Phase1OrchestratorTest.java
src/test/kotlin/com/trafficcopilot/phase1/: Phase1OrchestratorTest.kt
src/traffic_copilot/: __init__.py  phase1.py
tests/: test_phase1_submission.py
