[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-copilot"
version = "0.1.0"
description = "Phase1 traffic violation submission orchestrator prototype"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
